--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <img src="images/town_hall_logo.gif" alt="Town Hall Logo" height="80">
-  <h2>San Joaquin Valley Town Hall</h2>
-  <h3>Celebrating our 75<sup>th</sup> Year</h3>
-</header>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>San Joaquin Valley Town Hall</title>
+	<link rel="icon" href="images/favicon.ico">
 </head>
+<body>
+	<header>
+		<img src="images/town_hall_logo.gif" alt="Town Hall Logo" height="80">
+    <h2>San Joaquin Valley Town Hall</h2>
+    <h3>Celebrating our 75<sup>th</sup> Year</h3>		
+	</header>
+<main>
 <body>
 	<main>
   <h2>Our Mission</h2>
