--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
     <h2>San Joaquin Valley Town Hall</h2>
     <h3>Celebrating our 75<sup>th</sup> Year</h3>		
 	</header>
+
 <main>
-<body>
-	<main>
   <h2>Our Mission</h2>
   <p>
-    San Joaquin Valley Town Hall is a non-profit organization run by an all-volunteer board of directors.
-    Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform,
-    educate, and entertain our audience.
+  San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors. 
+  Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate, 
+  and entertain our audience.  
+  <p>As one of our members told us:</p>
   </p>
-
   <blockquote>
-    <q>Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge—and that is priceless.</q>
+    <q> Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless.</q>
   </blockquote>
 
   <h2>Our Ticket Packages</h2>
@@ -38,11 +37,12 @@
   <h3>October<br><a href="speakers/brancaccio.html">David Brancaccio</a></h3>
   <img src="images/brancaccio75.jpg" alt="David Brancaccio">
 
-  <h3>November<br><a href="speakers/chua.html">Lisa Chua</a></h3>
-  <img src="images/chua75.jpg" alt="Lisa Chua">
-
-  <h3>December<br><a href="speakers/sorkin.html">Andrew Sorkin</a></h3>
+  <h3>November<br><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
   <img src="images/sorkin75.jpg" alt="Andrew Sorkin">
+
+  <h3>January<br><a href="speakers/chua.html">Amy Chua</a></h3>
+  <img src="images/chua75.jpg" alt="Amy Chua">
+
 </main>
 
 	<footer>
